# bazel-gazelle

./: MODULE.bazel  WORKSPACE  deps.bzl  go.mod  go.sum
config/: config.go
internal/: go_repository_tools_srcs.bzl
merger/: merger.go
rule/: directives.go  merge.go  merge_test.go
tests/: BUILD.bazel
walk/: BUILD.bazel  config.go  trie.go  walk.go
